# BLCarModbusInterface

./: .gitignore  CMakeLists.txt  README.md  battery.cpp  battery.h  batterysql.h  carstate.cpp  carstate.h  carstatesql.h  cnn.code-workspace  common.h  device.h  joint_driver.h  light.cpp  light.h  lightsql.h  log.h  main.cpp  modbus_wrapper.cpp  modbus_wrapper.h  motor.h  motorcontroller.cpp  motorcontroller.h  motorcontrollersql.h  music.cpp  music.h  musicsql.h  read_modbus_config.csv
build copy/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  gtest_connection_test  test  testTCPClient
build copy/.cmake/api/v1/reply/: cache-v2-7ad738861076766f01d5.json  cmakeFiles-v1-ed9ce9f33615df265671.json  codemodel-v2-bf2002b826be621fb76c.json  index-2023-09-05T18-25-42-0570.json  target-gtest_connection_test-Debug-01d5c8bbd73a18db004c.json  target-main-Debug-40bf3e9b8d5e83c12fff.json  target-testTCPClient-Debug-326f8eb038ff73a5a4af.json
cppmodbus/config/: motor_config.csv  read_modbus_config.csv  write_modbus_config.csv
cppmodbus/include/modbus/: modbus_wrapper.h
cppmodbus/include/motorController/: joint_driver.h  motor.h
cppmodbus/src/: joint_driver.cpp  modbus_wrapper.cpp
cppmodbus/test/: test.cpp  test_motor.cpp
data/: device_parameter.csv  read_modbus_config.csv
include/: common.h  connthread.h  control.h  help.h  modbus.h  modbus_wrapper.h  server.h
include/client/: TCPClient.h
include/utility/: utility.h
lib/json-develop/: CMakeLists.txt
src/: control.cpp  main.cpp  modbus_wrapper.cpp  server.code-workspace  server.cpp
test/: client.py
test/cpp/: TCPClient.cpp  client.cpp
test/cppmodbus/: CMakeLists.txt
test/cppmodbus/config/: motor_config.csv  read_modbus_config.csv  write_modbus_config.csv
test/cppmodbus/include/modbus/: modbus.h  modbus_wrapper.h
test/cppmodbus/include/motorController/: joint_driver.h  motor.h
test/cppmodbus/src/: joint_driver.cpp  modbus_wrapper.cpp
test/cppmodbus/test/: test.cpp  test_motor.cpp  test_wrapper.cpp
test/gtest/: gtest_connection_test.cpp  gtest_lifter_motion.cpp  gtest_wheel_motion.cpp
